<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="info_text">You are here</string>
    
    <string name="app_name">Multi Language App</string>
    <string name="welcome">Welcome</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
  
    <string-array name="languages">
        <item>Choose Language</item>
        <item>Deutsch</item>
        <item>Francais</item>
        <item>English</item>
        <item>العربية</item> </string-array>

</resources>
