<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jeffali.multilingualapp.MainActivity" >
 <ImageView
        android:id="@+id/countryImg"
        android:layout_width="60dp"
        android:layout_height="60dp"
android:layout_alignParentRight="true" 
android:layout_alignParentTop="true"    
   android:background="@drawable/flag" />
 <Spinner android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_toLeftOf="@id/countryImg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:entries="@array/languages"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/LinearLayout">
        
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_marginBottom="40dp"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"/>
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >
            <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">
            
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:background="@null"
                android:singleLine="true"/>
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                 android:padding="5dp"
                android:background="@null"
                android:inputType="textPassword"
                style="@style/arabicbodytext"
                />
            </LinearLayout>
            <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_button_login"
                android:text="@string/login"
                android:textColor="@color/white"
                android:layout_marginTop="25dp"
                />
            
            
        </LinearLayout>
        
        
        
    </LinearLayout>
    <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/white" 
                android:gravity="center_horizontal"
                android:layout_marginBottom="25dp"
               android:layout_alignParentBottom="true"/>
    
    

</RelativeLayout>
